--- a/src/App.css
+++ b/src/App.css
@@ -2,13 +2,18 @@ body {
   padding-top:20px;
   background-color:#9fff9f !important;
 }
-.App {
+/* .App {
   margin:0 auto;
   text-align: center;
-}
+  justify-content: center;
+} */
 
 .App-logo {
   height: 40vmin;
+}
+
+.App button {
+  margin-bottom:20px;
 }
 
 .App-header {
@@ -33,20 +38,18 @@ body {
 .App h1{
   margin-bottom:20px; 
 }
+.rules{
+  background-color:white;
+  border:2px solid black;
+  padding:10px 20px;
+  margin-bottom:20px;
+}
 .Board {
   display:flex;
   flex-direction: column;
   align-items: center;
 }
 
-.topPart {
-  display:flex;
-  flex-direction: row;
-  align-items:center;
-  flex-wrap:wrap;
-  justify-content: center;
-  margin-bottom:20px;
-}
 .scoreBoard {
   display:flex;
 }
@@ -55,7 +58,7 @@ body {
   height:50px;
 }
 .refreshButton{
-  margin-left:10px;
+  margin: auto 0 auto 10px;
 }
 
 /* Dice */
@@ -90,6 +93,9 @@ body {
 }
 .scoringTable table {
   background-color:white;
+}
+.scoringTable table tbody {
+  text-align:center;
 }
 .scoringTable table td,.scoringTable table th {
   vertical-align: middle;
